# 4-practica-mascotas-virtuales-maria-fernanda-y-alejandro-botero

./: CMakeLists.txt  main.cpp
src/: Habilidad.cpp  Habilidad.h  Mascota.cpp  Mascota.h  Objeto.cpp  Objeto.h  Sistema.cpp  Sistema.h  Tienda.cpp  Tienda.h  Usuario.cpp  Usuario.h
