cmake_minimum_required(VERSION 3.30)
project(Poo_proyect_2)

set(CMAKE_CXX_STANDARD 20)

add_executable(Poo_proyect_2
        src/Tienda.cpp
        src/Tienda.h
        src/Objeto.cpp
        src/Objeto.h
        src/Sistema.cpp
        src/Sistema.h
        src/Usuario.cpp
        src/Usuario.h
        src/Habilidad.cpp
        src/Habilidad.h
        arc/Mascota.cpp
        src/Mascota.cpp
        main.cpp
)
